[package]
name = "trading-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# == Core runtime ==
anyhow = "1"

# == Utility ==
bincode = { version = "2", features = ["std", "derive"] }

# == Queues ==
heapless = { version = "0", features = ["serde"] }

# === Custom Libraries ===
manager-service-discovery-client = {git = "https://github.com/ElBellaCiao/manager-service-discovery.git", rev = "2ca25fe5534068f57723fa85dec4aa6f85122e81" }
