[package]
name = "trading-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# == Core runtime ==
anyhow = "1"

# == Concurrency ==
core_affinity = "0"

# == Queues ==
heapless = { version = "0", features = ["serde"] }

# == utility ==
bytemuck =  { version = "1", features = ["derive"] }
retry = "2"

# == Databento ==
serde = { version = "1", features = ["derive"] }
csv = "1"

# === Custom Libraries ===
manager-service-discovery-client = {git = "https://github.com/ElBellaCiao/manager-service-discovery.git", rev = "2ca25fe5534068f57723fa85dec4aa6f85122e81" }
