[package]
name = "trading-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# == Core runtime ==
anyhow = "1"

# == Data structure ==
rustc-hash = "2.1.1"

# == Concurrency ==
core_affinity = { version = "0", optional = true }

# == utility ==
bytemuck =  { version = "1", features = ["derive"], optional = true }
retry = { version = "2", optional = true }
chrono = { version = "0", optional = true }

# == Databento ==
databento = { version = "0", features = ["live"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
csv = { version = "1", optional = true }

[features]
thread = ["core_affinity"]
network = ["bytemuck", "retry"]
model = ["chrono", "bytemuck"]
parse = ["databento", "serde", "csv"]
